--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <img src="src/vector.svg" alt="BMI Vector" style="width: 300px;">
             <p id="title">BMI Calculator</p>
             <div class="input-group">
-                <p>Height</p>
+                <p>Height (cm)</p>
                 <input type="text" id="height-input">
-                <p>Weight</p>
+                <p>Weight (kg)</p>
                 <input type="text" id="weight-input">
             </div>
             
