--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <p id="title">BMI Calculator</p>
             <div class="input-group">
                 <p>Height (cm)</p>
-                <input type="text" id="height-input">
+                <input type="text" id="height-input" placeholder="Sample: 167">
                 <p>Weight (kg)</p>
-                <input type="text" id="weight-input">
+                <input type="text" id="weight-input" placeholder="Sample: 52">
             </div>
             
             <button id="calculate-button">Calculate</button>
